--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,7 +9,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
+        python-version: '3.12' #swapped to 3.12 to work with my version
     - name: Install dependencies
       run: pip install -r requirements.txt
     - name: Run tests
