--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -13,5 +13,4 @@ jobs:
     - name: Install Flake8
       run: pip install flake8
     - name: Run Flake8
-      run: flake8 quiz_controller.py quiz_model.py quiz_service.py
-test_quiz.py
+      run: flake8 quiz_controller.py quiz_model.py quiz_service.py test_quiz.py
