--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -13,4 +13,4 @@ jobs:
     - name: Install Flake8
       run: pip install flake8
     - name: Run Flake8
-      run: flake8 quiz_controller.py quiz_model.py quiz_service.py test_quiz.py
+      run: flake8 src/controllers/quiz_controller.py src/models/quiz_model.py src/services/quiz_service.py src/tests/test_quiz.py
