--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,3 +14,7 @@ jobs:
       run: pip install -r requirements.txt
     - name: Run tests
       run: pytest
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        token: ${e0a7bf12-c188-4dc2-b497-ccc123a9dee7}
