--- a/.github/workflows/codeql-analysis.yaml
+++ b/.github/workflows/codeql-analysis.yaml
@@ -4,6 +4,9 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+permissions:
+  contents: read
+  pull-requests: write
 jobs:
   analyze:
     runs-on: ubuntu-latest
