--- a/.github/workflows/codeql-analysis.yaml
+++ b/.github/workflows/codeql-analysis.yaml
@@ -6,7 +6,7 @@ on:
     branches: [master]
 permissions:
   contents: read
-  pull-requests: write-all
+  pull-requests: write
 jobs:
   analyze:
     runs-on: ubuntu-latest
